--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,27 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Counter from '../components/Counter.svelte';
 ---
 <Layout title="Welcome to Astro.">
 	<main>
+		<div class="drawer drawer-mobile">
+			<input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
+			<div class="drawer-content flex flex-col items-center justify-center">
+				<!-- Page content here -->
+				<label for="my-drawer-2" class="btn btn-primary drawer-button lg:hidden">Open drawer</label>
+			
+			</div> 
+			<div class="drawer-side">
+				<label for="my-drawer-2" class="drawer-overlay"></label> 
+				<ul class="menu p-4 overflow-y-auto w-80 bg-base-100 text-base-content">
+				<!-- Sidebar content here -->
+				<li><a>Sidebar Item 1</a></li>
+				<li><a>Sidebar Item 2</a></li>
+				</ul>
+			
+			</div>
+		</div>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			Check out the <code>src/pages</code> directory to get started.<br/>
@@ -15,7 +33,11 @@ import Card from '../components/Card.astro';
 			<Card href="https://astro.build/themes/" title="Themes" body="Explore a galaxy of community-built starter themes." /> 
 			<Card href="https://astro.build/chat/" title="Chat" body="Come say hi to our amazing Discord community. ❤️" />
 		</ul>
-	</main>
+			<Counter client:visible>
+				<h1>Hello, Svelte!</h1>
+				<a href="https://strawpoll.vote/polls/zhz5zxjc/vote"> Vote Now!</a>
+			</Counter>
+	</main>	
 </Layout>
 
 <style>
