--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,7 @@ const games = [
     </div>
 	<GameShowcase games={games} client:load/>
 	<div class="border-base-300 bg-base-200 rounded-b-box rounded-tr-box flex min-h-[7rem] min-w-screen max-w-screen flex-wrap items-center justify-center gap-2 overflow-x-hidden border bg-cover bg-top p-4 undefined">
-   		<button class="btn btn-wide btn-primary" > 
-		   <a target="_blank" href="https://strawpoll.vote/polls/zhz5zxjc/vote?s=0">Vote Now!</a>
-		</button>
+		<a target="_blank" class="btn btn-wide btn-primary" href="https://strawpoll.vote/polls/zhz5zxjc/vote?s=0">Vote Now!</a>
 	</div>
 	<!--<div class="flex flex-row hero">
 	 	<div class="w-1/5 pl-15">
